--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@babel/preset-env": "^7.8.6",
-    "jest": "^25.1.0"
+    "@babel/preset-env": "^7.8.6"
   }
 }
